# cupcalculator

./: .gitignore  CMakeLists.txt  README.md  TODO  copyright  editGermanTranslation.sh  iwyu-main.imp  iwyu-qt.imp  releaseGermanTranslation.sh  updateTranslations.sh
ci/: azure-pipelines.yml  build.yml  filter-stderr.sed  openorienteering-cupcalculator-ci.cmake  publish-coverage.yml  publish.yml  release-notes.yml  setup-common.yml  setup-msys2.yml  setup-ubuntu.yml
cmake/: bundle_helper.cmake  bundle_helper_install.cmake.in  licensing_helper.cmake  licensing_helper_install.cmake.in  unix2dos.cmake
data/: CMakeLists.txt
data/example input/: example_input.csv
data/my layouts/: presentation_example_cup.xml
src/: CMakeLists.txt  club.cpp  club.h  clubDialog.cpp  clubDialog.h  comboBoxDelegate.cpp  comboBoxDelegate.h  config.h.in  csvFile.cpp  csvFile.h  event.cpp  event.h  global.h  layout.cpp  layout.h  location.cpp  location.h  main.cpp  mainWindow.cpp  mainWindow.h  presentScoring.cpp  presentScoring.h  problemWidget.cpp  problemWidget.h  resultCsvImport.cpp  resultCsvImport.h  resultList.cpp  resultList.h  runner.cpp  runner.h  scoring.cpp  scoring.h  scoringDialog.cpp  scoringDialog.h  seriesScoring.cpp  seriesScoring.h  seriesScoringDialog.cpp  seriesScoringDialog.h  test.cpp  test.h  (+2 more)
src/win32/: resources.rc.in
translations/: CMakeLists.txt  de.ts
